# XBindJoy

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac  xbindjoy.scm
examples/: generic.scm
saulrh/: xbindjoy.scm
src/: joystick.c  joystick.h  sender.c  sender.h  xbindjoy.c  xbindjoy.h
test/: basic_script.scm  generic.scm  helpers.scm  minecraft.scm
test/saulrh/: xbindjoy.scm
